[workspace]

members = [
  "chapter/01-getting-started",
  "chapter/02-guessing-game",
  "chapter/03-common-concepts",
  "chapter/04-understanding-ownership",
  "chapter/05-using-structs",
  "chapter/06-enums-patterns",
  "chapter/07-growing-projects",
  "chapter/08-common-collections",
  "chapter/09-error-handling",
  "chapter/10-generics-traits-lifetimes",
  "chapter/11-automated-tests",
  "chapter/12-cli-program",
  "chapter/13-functional-features",
  "chapter/14-more-cargo",
  "chapter/15-smart-pointers",
]
